@@ -1,3 +1,9 @@
+Wed Feb 27 13:54:27 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tests/Wild_Match_Test.cpp:
+          Extended this test to get 100% coverage for ACE::wild_match, resolves
+          Coverity 753117
+
 Tue Feb 26 23:07:17 UTC 2013  Steve Huston  <shuston@riverace.com>
 
         * include/makeinclude/platform_g++_common.GNU: When turning on
